Popup link fix & suggestions added

--- a/popup.html
+++ b/popup.html
@@ -20,12 +20,14 @@
 		<p>We try to help foreign students as much as possible. One of the very practical problems foreign students face is that most communication online (with the government, banking, etc) is in Dutch. The 'English pages' these websites offer are usually insufficient. Google Translate doesn't work over HTTPS connections, it's simply to unsafe.</p>
 		<p>That's why we've created Studentify Translate. Studentify Translate is a simple, safe tool to translate it on the fly. It's safe because all requests are kept within the browser, so nothing goes to any external server, it's simply translated on your local computer.</p>
 		<h2>Runtime</h2>
-		<p>To increase load time, Studentify Translate will only run on the following (secure) websites:</p>
+		<p>To increase load time, Studentify Translate will only run on the following (secured) websites:</p>
 		<ul>
 			<li>https://bankieren.rabobank.nl</li>
 		</ul>
+		<h2>Any suggestions?</h2>
+		<p>We welcome any suggestion you may have to improve our plugin! Leave us a message at <a href="http://facebook.com/studentify">facebook.com/studentify</a> and we'll come back to you as soon as we can! Or, write an email to: <a href="mailto:support@studentify.nl">support@studentify.nl</a>! Hope to hear from you soon! Thx!
 		<h2>Open Source</h2>
-		<p>This current project is maintained by Maurice Kroon from Studentify.nl. This project is completely open source. For more info, check out Github: <a href="http://github.com/studentify/translate-chrome">http://github.com/studentify/translate-chrome</a>. We would love to see you contribute!</p>
+		<p>This current project is maintained by Maurice Kroon from Studentify.nl. This project is completely open source. For more info, check out Github: <a href="https://github.com/Studentify/Translator">https://github.com/Studentify/Translator</a>. We would love to see you contribute!</p>
 		<h2>Disclaimer</h2>
 		<p>Studentify B.V. is not affiliated with Rabobank.</p>
 		<a href="http://studentify.nl" alt="Go to Studentify.nl"><img src="studentify-logo-small.png" style="margin-top: 20px; width: 200px;" /></a>
