--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 	<body>
 		<h1>Studentify Translate</h1>
 		<h2>About</h2>
-		<p>We try to help foreign students as much as possible. One of the very practical problems foreign students face is that most communication online (with the government, banking, etc) is in Dutch. The 'English pages' these websites offer are usually insufficient. Google Translate doesn't work over HTTPS connections, it's simply to unsafe.</p>
+		<p>We try to help foreign students as much as possible. One of the very practical problems foreign students face is that most communication online (with the government, banking, etc) is in Dutch. The 'English pages' these websites offer are usually insufficient. Google Translate doesn't work over HTTPS connections, it's simply too unsafe.</p>
 		<p>That's why we've created Studentify Translate. Studentify Translate is a simple, safe tool to translate it on the fly. It's safe because all requests are kept within the browser, so nothing goes to any external server, it's simply translated on your local computer.</p>
 		<h2>Runtime</h2>
 		<p>To increase load time, Studentify Translate will only run on the following (secured) websites:</p>
